package com.techreturners.introduction_to_oop.exercises;


public interface Dance {

      void spin();
      void doTheCaterpillar();
      void jump();

}

