@startuml
'https://plantuml.com/class-diagram

interface Dance{
    spin()
    doTheCaterpillar()
    jump()
}

abstract class Bird implements Dance {
   String name
   String color
   abstract speak()
   fly()
 }

class Pigeon {
    speak()
    eatPizza()
    sleep()
}

class Parrot{
speak()
}

Bird <|-- Pigeon
Bird <|-- Parrot



@enduml